crates/toml_edit/tests/snapshots/invalid/string/bad-escape-03.stderr
TOML parse error at line 1, column 15
  |
1 | backslash = "\"
  |               ^
missing escaped value, expected `b`, `f`, `n`, `r`, `\`, `"`, `u`, `U`
